--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -652,11 +652,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Answers to the other questions of the Final Exam"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -690,32 +690,97 @@
    "source": [
     "# Q2\n",
     "\n",
-    "Let the c deleted edges be e_1, e_2, e_3,....e_c, where   \n",
-    "e_1 is the edge between node u_1 and v_1 with cost, cost_1  \n",
-    "e_2 is the edge between node u_2 and v_2 with cost, cost_2\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    "e_c is the edge between node u_c and v_c with cost, cost_c\n",
+    "Let the c deleted edges be $e_1, e_2, e_3,....e_c$, where   \n",
+    "$e_1$ is the edge between node $u_1$ and $v_1$ with cost, $cost_1$   \n",
+    "$e_2$ is the edge between node $u_2$ and $v_2$ with cost, $cost_2$  \n",
+    ".  \n",
+    ".  \n",
+    ".  \n",
+    "$e_c$ is the edge between node $u_c$ and $v_c$ with cost, $cost_c$  \n",
     "\n",
-    "Starting from node s, run Dijkstra’s algorithm on the subgraph H to get shortest path between nodes s and u_1,u_2,u_3,...u_c and store these values as su_1,su_2,su_3....su_c, respectively.   \n",
-    "In general, represent these as su_i where i ranges from 1 to c.  \n",
-    "Based on the hint, this is an O(mlogn) operation where m is the number of edges in H and n is the number of vertices in G.\n",
+    "Starting from node $s$, run Dijkstra’s algorithm on the subgraph $H$ to get shortest path between nodes $s$ and $u_1,u_2,u_3,...u_c$ and store these values as $su_1,su_2,su_3....su_c$, respectively.   \n",
+    "In general, represent these as $su_i$ where $i$ ranges from $1$ to $c$.  \n",
+    "Based on the hint, this is an $O(mlogn)$ operation where $m$ is the number of edges in $H$ and $n$ is the number of vertices in $H$.\n",
     "\n",
-    "Starting from node t, run Dijkstra’s algorithm on the subgraph H to get shortest path between nodes s and v_1,v_2,v_3,...v_c and store these values as sv_1,sv_2,sv_3....sv_c, respectively.  \n",
-    "In general, represent these as sv_i where i ranges from 1 to c.  \n",
-    "Based on the hint, This is an O(mlogn) operation where m is the number of edges in H and n is the number of vertices in G.\n",
+    "Starting from node $t$, run Dijkstra’s algorithm on the subgraph $H$ to get shortest path between nodes $s$ and $v_1,v_2,v_3,...v_c$ and store these values as $sv_1,sv_2,sv_3....sv_c$, respectively.  \n",
+    "In general, represent these as $sv_i$ where $i$ ranges from $1$ to $c$.  \n",
+    "Based on the hint, this is an $O(mlogn)$ operation where m is the number of edges in $H$ and $n$ is the number of vertices in $H$.\n",
     "\n",
-    "The goal now is to add back an edge e_1/e_2/....or e_c such that we get the shortest path possible between s and t. This is equivalent to minimizing the total cost su_i + e_i + sv_i for all i between 1 and c.  \n",
-    "This is an O(n) operation where n is the number of elements of the list, the maximum of which is to be found. Here, the number of elements in the list is c.\n"
+    "The goal now is to add back an edge $e_1$ or $e_2$....or $e_c$ such that we get the shortest path possible between $s$ and $t$. This is equivalent to minimizing the total cost $su_i + cost_i + sv_i$ for all $i$ between $1$ and $c$.  \n",
+    "This is an $O(c)$ operation where $c$ is the number of elements of the list (c deleted edges), the maximum of which is to be found. \n",
+    "\n",
+    "In summary, Dijkstra’s algorithm needs to be run twice $O(2mlogn) \\approx O(mlogn)$ and the $O(n)$  \n",
+    "\n",
+    "So the total running time of the algorithm is $O(mlogn) + O(c)$. Assuming $c \\approx O(m)$, the total rumnning time of this algorithm is $O(mlogn)$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q 11\n",
-    "Given an L table, the length of the LCS is given by the value at the bottom right of the table. In this case, the value at the bottom right is 6. Therefore the length of the LCS is 6."
+    "# Q3 \n",
+    "\n",
+    "It is known that if a depth first search (DFS) starting from any arbitrary node of a graph, visits every other node of the (undirected)graph, then the graph is connected. Depth first search is  $O(m+n)$ where $m$ is the number of edges and $n$ is the number of nodes in the graph.\n",
+    "\n",
+    "Removing a node $v$ from a graph $G$, also removes certain number of edges $e \\leq m$. A connected graph $G$ becomes disconnected upon the removal of a node $v$ if any one of the edges $e$ is a `bridge`. The goal then is to identify if any of $e$ is a bridge. \n",
+    "\n",
+    "In other words, given a graph $G$, the aim is to identify edges which are bridges in O(m+n) time according to the question. Then we can check if any of the removed edges are bridges to decide if the graph remains connected or not upon the removal of a node.\n",
+    "\n",
+    "The DFS rooted on a node, gives rise to two kinds of edges in the resulting DFS tree since DFS does not visit all edges of a graph.\n",
+    "1. Forward edges - These are the edges of $G$ which are visited while generating the DFS tree\n",
+    "2. Back edges - These are the edges of $G$ which are not visited while generating the DFS tree\n",
+    "\n",
+    "Back edges, put into a DFS tree, creates cycles in a tree. Additionally, back edges connect a node to an ancestor of the node, who is not its direct parent. Back edges can never be bridges since if it were a bridge, it would be visited by DFS and be included in the DFS tree.\n",
+    "Therefore, only forward edges can be candidates for bridges.\n",
+    "\n",
+    "Pseudocode to identify bridges in $O(m+n)$ (stemming off the Tarjan's algorithm)...same as DFS time complexity.\n",
+    "\n",
+    "1. Start traversing a connected graph $G$ from node $v$\n",
+    "2. During DFS on $G$, keep track and update the following information\n",
+    "    - Discovery time (`disc`): For each node, this value indicates the time (starting from 0) at which the node is visited by the DFS\n",
+    "    - Low value (`low`): This value for each node, $u$, indicates whether there is an earlier node (whose discovery time value will be lower) which can be visited by the subtree rooted in the node $u$.\n",
+    "3. In DFS tree a forward edge (u, v) (u is parent of v in DFS tree) is a bridge if there does not exist any other alternative to reach u or an ancestor of u from subtree rooted with v. low[v] indicates earliest visited vertex reachable from subtree rooted with v. The condition for an edge (u, v) to be a bridge is, “low[v] > disc[u]”\n",
+    "4. Store all such (u,v). These are the bridges.\n",
+    "\n",
+    "\n",
+    "Given the list of all bridge edges, check if any of these bridge edges is present in the list of removed edges when node v is removed from graph $G$. This check can be an $O(1)$ or $O(m)$ operation. If it is present, then this means that the graph becomes disconnected upon removal of the node. Otherwise, it remains connected. \n",
+    "\n",
+    "The overall time complexity of this algorithm is $O(m+n)$\n",
+    "\n",
+    "```\n",
+    "    //the value of 'time' will not be initialized for next function calls mark start as visited\n",
+    "\n",
+    "    time := 0 \n",
+    "    set disc[start] := time+1 and low[start] := time + 1\n",
+    "    time := time + 1\n",
+    "\n",
+    "    for all vertex v in the graph G, do\n",
+    "        if there is an edge between (start, v), then\n",
+    "            if v is visited, then\n",
+    "                parent[v] := start\n",
+    "                bridgeDetails(v, visited, disc, low, parent)\n",
+    "                low[start] := minimum of low[start] and low[v]\n",
+    "\n",
+    "                if low[v] > disc[start], then\n",
+    "                display bridges from start to v\n",
+    "            else if v is not the parent of start, then\n",
+    "                low[start] := minimum of low[start] and disc[v]\n",
+    "    done\n",
+    "    \n",
+    "    End\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q4\n",
+    "\n",
+    "Total bits used by Huffman encoding with the given frequency = 17500 (Average 1.75 bits)  \n",
+    "Total bits used by encoding, where each character is encoded using 2 bits = 20000 (Average 2 bits)  \n",
+    "\n",
+    "Photograph of the huffman tree generation process and calculations shown in the photograph. "
    ]
   },
   {
@@ -1019,6 +1084,14 @@
     "A = [15,15,15]\n",
     "target_sum = 45\n",
     "print(f\"Does subset with sum {target_sum} exist in {A}?\",does_subset_with_sum_exist(A, target_sum))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q 11\n",
+    "Given an L table, the length of the LCS is given by the value at the bottom right of the table. In this case, the value at the bottom right is 6. Therefore the length of the LCS is 6.\n"
    ]
   },
   {
