--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -787,6 +787,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Q5\n",
+    "\n",
+    "Deleting an edge from an MST, splits it into two connected components $A$ and $B$\n",
+    "\n",
+    "- Choose any random vertex in graph $G$. This is $O(1)$.\n",
+    "- Let this vertex be $u$. \n",
+    "- Iterate over its neighbors in graph $T$ and store the vertex and its neighbors in a list $A$. Data structure used is an array or a linked list. This is an $O($V$)$ operation\n",
+    "- This list of nodes belong, without loss of generality, to $A$. \n",
+    "\n",
+    "Next,\n",
+    "\n",
+    "- Get a random vertex of the $G$ which is not in $A$. This is an $O(|V|)$ operation.\n",
+    "- Let this vertex be $v$. \n",
+    "- Iterate over its neighbors in graph $T$ and store the vertex and its neighbors in a list $B$. Data structure used is an array or a linked list. This is an $O(|V|)$ operation\n",
+    "- This list of nodes belong, without loss of generality, to $A$. \n",
+    "\n",
+    "Next,\n",
+    "- Iterate over the list of edges of $G$. This is $O(|E|)$\n",
+    "    - Get the end points of the edge: $(u,v)$\n",
+    "    - If ($u$ is in $A$ and $v$ is in $B$) or ($v$ is in $A$ and $u$ is in $B$), set $min_edge = (u,v)$. *Searching for $u, v$ in $A or B$ is O(|V|) operation*    \n",
+    "    - Update $min_edge$ as the loop progresses.\n",
+    "\n",
+    "The final edge to be added to restore the minimum spanning tree is $(u,v)$\n",
+    "\n",
+    "\n",
+    "Complexity of this algorithm $O(|E|)$ under the assumption that $|E|>|V|$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Q6"
    ]
   },
