table of contents

--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -4,6 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rachith Aiyappa\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Table of Contents <a id='toc'></a>\n",
+    "\n",
+    "* [Multiple Choice Questions](#MCQs)\n",
+    "* [Problem 2](#P2)\n",
+    "* [Problem 3](#P3)\n",
+    "* [Problem 4](#P4)\n",
+    "* [Problem 5](#P5)\n",
+    "* [Problem 6](#P6)\n",
+    "* [Problem 7](#P7)\n",
+    "* [Problem 8](#P8)\n",
+    "* [Problem 9](#P9)\n",
+    "* [Problem 10](#P10)\n",
+    "* [Problem 11](#P11)\n",
+    "* [Programming Problem 1](#pp1)\n",
+    "* [Programming Problem 1](#pp2)\n",
+    "\n",
+    "***\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Final exam programming problem\n",
     "\n",
     "In this problem, you will work on the following:\n",
@@ -31,7 +58,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Programming Problem 1"
+    "# Programming Problem 1 <a id='PP1'></a>  \n",
+    "[back to table of contents](#toc)"
    ]
   },
   {
@@ -655,13 +683,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Answers to the other questions of the Final Exam"
+    "# Answers to the other questions of the Final Exam\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# MCQs <a id='MCQs'></a>\n",
+    "[back to table of contents](#toc)\n",
+    "\n",
     "### Q 1.1 (A)\n",
     "The minimum spanning tree does not change when each edge weight is incremented by 1\n",
     "### Q 1.2 (B)\n",
@@ -679,16 +712,15 @@
     "### Q 1.6 (D)\n",
     "bacca\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q2\n",
+    "# Q2 <a id='P2'></a>  \n",
+    "[back to table of contents](#toc)\n",
     "\n",
     "Let the c deleted edges be $e_1, e_2, e_3,....e_c$, where   \n",
     "$e_1$ is the edge between node $u_1$ and $v_1$ with cost, $cost_1$   \n",
@@ -711,14 +743,17 @@
     "\n",
     "In summary, Dijkstra’s algorithm needs to be run twice $O(2mlogn) \\approx O(mlogn)$ and the $O(n)$  \n",
     "\n",
-    "So the total running time of the algorithm is $O(mlogn) + O(c)$. Assuming $c \\approx O(m)$, the total rumnning time of this algorithm is $O(mlogn)$"
+    "So the total running time of the algorithm is $O(mlogn) + O(c)$. Assuming $c \\approx O(m)$, the total rumnning time of this algorithm is $O(mlogn)$\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q3 \n",
+    "# Q3 <a id='P3'></a>  \n",
+    "[back to table of contents](#toc)\n",
     "\n",
     "It is known that if a depth first search (DFS) starting from any arbitrary node of a graph, visits every other node of the (undirected)graph, then the graph is connected. Depth first search is  $O(m+n)$ where $m$ is the number of edges and $n$ is the number of nodes in the graph.\n",
     "\n",
@@ -768,26 +803,32 @@
     "    done\n",
     "    \n",
     "    End\n",
-    "```"
+    "```\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q4\n",
+    "# Q4 <a id='P4'></a>  \n",
+    "[back to table of contents](#toc)\n",
     "\n",
     "Total bits used by Huffman encoding with the given frequency = 17500 (Average 1.75 bits)  \n",
     "Total bits used by encoding, where each character is encoded using 2 bits = 20000 (Average 2 bits)  \n",
     "\n",
-    "Photograph of the huffman tree generation process and calculations shown in the photograph. "
+    "Photograph of the huffman tree generation process and calculations shown in the photograph. \n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q5\n",
+    "# Q5 <a id='P5'></a>  \n",
+    "[back to table of contents](#toc)\n",
     "\n",
     "Deleting an edge from an MST, splits it into two connected components $A$ and $B$\n",
     "\n",
@@ -812,14 +853,17 @@
     "The final edge to be added to restore the minimum spanning tree is $(u,v)$\n",
     "\n",
     "\n",
-    "Complexity of this algorithm $O(|E|)$ under the assumption that $|E|>|V|$"
+    "Complexity of this algorithm $O(|E|)$ under the assumption that $|E|>|V|$\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q6"
+    "# Q6 <a id='P6'></a>  \n",
+    "[back to table of contents](#toc)"
    ]
   },
   {
@@ -846,14 +890,16 @@
     "``` \n",
     "\n",
     "Therefore, worst case time complexity is $O(N \\times N \\times N \\times 8 \\times len(longest\\ word)) \\approx O(N^3)$, assuming $len(longest\\ word) << N,\\ and\\ N >> 8$\n",
-    "    "
+    "    \n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q7"
+    "# Q7 <a id='P7'></a>  \n",
+    "[back to table of contents](#toc)"
    ]
   },
   {
@@ -883,14 +929,17 @@
     "Therefore, \n",
     "* The time complexity of the above function is $O(1) + O(1) + O(n/2 \\times logn \\times 1 \\times 1) \\approx O(nlogn)$\n",
     "* The value of k :  \n",
-    "    A value of $n/2$ gets added to k (starting from 0), $nlogn$ times. Therefore, $k \\approx O(n^2logn)$  "
+    "    A value of $n/2$ gets added to k (starting from 0), $nlogn$ times. Therefore, $k \\approx O(n^2logn)$  \n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q8\n",
+    "# Q8 <a id='P8'></a>  \n",
+    "[back to table of contents](#toc)\n",
     "\n",
     "1. Merge sort always splits the array into two equal halves while quick sort doesn't necessarily split into two equal halves. Instead it splits in a ratio based on the pivot location\n",
     "2. Time complexity of quick sort is $O(N^2)$ whereas time complexity of merge sort is $O(NlogN)$\n",
@@ -906,6 +955,8 @@
     "\n",
     "Quick Sort requires a lot of access to different memory locations (randomly, not sequentially).  Therefore, quick sort used on linked list is slow and heavy.   \n",
     "On the other hand, merge sort accesses data sequentially and the need for random access is low, which makes it very suitable for linked lists.\n",
+    "\n",
+    "***\n",
     " "
    ]
   },
@@ -913,7 +964,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q9"
+    "# Q9 <a id='P9'></a>  \n",
+    "[back to table of contents](#toc)"
    ]
   },
   {
@@ -1021,14 +1073,15 @@
     "\n",
     "\n",
     "\n",
-    "\n"
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q10"
+    "# Q10 <a id='P10'></a>  \n",
+    "[back to table of contents](#toc)"
    ]
   },
   {
@@ -1122,15 +1175,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q 11\n",
-    "Given an L table, the length of the LCS is given by the value at the bottom right of the table. In this case, the value at the bottom right is 6. Therefore the length of the LCS is 6.\n"
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Programming Problem 2"
+    "# Q 11 <a id='P11'></a>  \n",
+    "[back to table of contents](#toc)  \n",
+    "\n",
+    "Given an L table, the length of the LCS is given by the value at the bottom right of the table. In this case, the value at the bottom right is 6. Therefore the length of the LCS is 6.\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Programming Problem 2 <a id='pp2'></a>  \n",
+    "[back to table of contents](#toc)"
    ]
   },
   {
@@ -1237,6 +1302,13 @@
     "    row += 1\n",
     "\n",
     "print(f\"subset of elements summing closest to {target_sum} is {add_to_sack} with a sum of {table[0][0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*** "
    ]
   }
  ],
