bug fixes, beuatification

--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,14 +417,39 @@
     "# You may add more arguments in dfs_recursive() for your convenience\n",
     "\n",
     "def dfs(graph, starting_node, stopping_node):\n",
-    "    visited_nodes = [False for i in range(graph.num_nodes)]\n",
-    "    cycle_edges = []\n",
-    "    dfs_recursive(graph, starting_node, visited_nodes, cycle_edges, stopping_node)\n",
     "    \n",
+    "    visited_nodes = [False for i in range(graph.num_nodes)]\n",
+    "\n",
+    "    #starting from a node\n",
+    "    cycle_edges = [starting_node]\n",
+    "\n",
+    "    #list of nodes which have not been expanded yet.\n",
+    "    fringe = []\n",
+    "\n",
+    "    # keeps track of the (latest) parent of the chosen node.\n",
+    "    # key is the chosen node and value is its parent node\n",
+    "    where_come_from = {}\n",
+    "\n",
+    "    dfs_recursive(graph, starting_node, visited_nodes, cycle_edges, stopping_node, fringe, where_come_from)\n",
+    "\n",
+    "    # starting node does not come from anywhere\n",
+    "    where_come_from[starting_node] = None\n",
+    "\n",
+    "    backtracker = []\n",
+    "\n",
+    "    curr = stopping_node\n",
+    "    #backtrack. Read the where_come_from(parent) dictionary and track back the steps from the stopping node to the starting node.\n",
+    "\n",
+    "    #breaking condition when it reaches the starting node node\n",
+    "    while curr != None:\n",
+    "        # print(backtracker)\n",
+    "        backtracker.insert(0,curr)\n",
+    "        curr = where_come_from[curr]\n",
+    "        \n",
     "    # The following is for demonstration purpose\n",
     "    print(\"We found {:d} edges from node {:d} to node {:d}\"\n",
-    "          .format(len(cycle_edges), starting_node, stopping_node))\n",
-    "    for e in cycle_edges:\n",
+    "          .format(len(backtracker)-1, starting_node, stopping_node))\n",
+    "    for e in range(len(backtracker)-1):\n",
     "        '''\n",
     "        print the two end nodes of the edge\n",
     "            the weight information is not known so you do not need to output \n",
@@ -432,29 +457,37 @@
     "        You may change the following print statement\n",
     "            if you did not use Edge class\n",
     "        '''\n",
-    "        print(\"{:2d}, {:2d}\".format(e.node1, e.node2))\n",
+    "        print(\"{:2d}, {:2d}\".format(backtracker[e],backtracker[e+1]))\n",
     "\n",
     "\n",
-    "def dfs_recursive(graph, starting_node, visited_nodes, cycle_edges, stopping_node):\n",
+    "def dfs_recursive(graph, starting_node, visited_nodes, cycle_edges, stopping_node, fringe, where_come_from):\n",
     "\n",
-    "    if starting_node == stopping_node:\n",
+    "    # print(\"sn\",starting_node)\n",
+    "    # print(\"ce\",cycle_edges)\n",
+    "\n",
+    "    if not visited_nodes[starting_node]:\n",
+    "        #add this to visited\n",
+    "        visited_nodes[starting_node] = True\n",
+    "\n",
+    "        #for the neighbors of the node\n",
+    "        for i in graph.nodes[starting_node]:\n",
+    "            #if the neighbor is not already present in the cycle_edges\n",
+    "            if i not in cycle_edges:\n",
+    "                #insert non visited neighbors to the fringe\n",
+    "                fringe.insert(0,i)\n",
+    "                where_come_from[i] = starting_node\n",
+    "\n",
+    "    # print(\"f\",fringe)\n",
+    "    next_node=fringe.pop(0)\n",
+    "    # print(\"tr\",where_come_from)\n",
+    "\n",
+    "    # stopping condition\n",
+    "    if next_node == stopping_node:\n",
+    "        cycle_edges.append(next_node)\n",
     "        return\n",
     "    else:\n",
-    "        visited_nodes[starting_node] = True\n",
-    "        neighbors = graph.nodes[starting_node]\n",
-    "        if all([visited_nodes[neigh] for neigh in neighbors]):\n",
-    "            return\n",
-    "\n",
-    "        for neigh in neighbors:    \n",
-    "            if visited_nodes[neigh]:\n",
-    "                continue\n",
-    "            visited_nodes[starting_node] = True\n",
-    "            cycle_edges.append((Edge(starting_node, neigh)))\n",
-    "            dfs_recursive(graph, neigh, visited_nodes,cycle_edges,stopping_node)\n",
-    "\n",
-    "        return\n",
-    "\n",
-    "    "
+    "        cycle_edges.append(next_node)\n",
+    "        dfs_recursive(graph,next_node,visited_nodes,cycle_edges,stopping_node,fringe,where_come_from)"
    ]
   },
   {
@@ -468,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,33 +554,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 19 edges from node 2 to node 19\n",
+      "We found 4 edges from node 2 to node 19\n",
       " 2, 18\n",
-      "18,  0\n",
-      " 0, 17\n",
-      " 0,  5\n",
-      " 5,  1\n",
-      " 1, 11\n",
-      "11,  7\n",
-      " 7, 14\n",
-      " 5, 12\n",
-      " 5, 16\n",
-      "16,  9\n",
-      " 9,  8\n",
-      " 9, 10\n",
       "18,  3\n",
       " 3,  4\n",
-      " 4, 19\n",
-      " 4,  6\n",
-      " 4, 15\n",
-      "15, 13\n"
+      " 4, 19\n"
      ]
     }
    ],
@@ -557,33 +575,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 19 edges from node 3 to node 14\n",
+      "We found 7 edges from node 3 to node 14\n",
       " 3, 18\n",
       "18,  0\n",
-      " 0, 17\n",
       " 0,  5\n",
       " 5,  1\n",
       " 1, 11\n",
       "11,  7\n",
-      " 7, 14\n",
-      " 5, 12\n",
-      " 5, 16\n",
-      "16,  9\n",
-      " 9,  8\n",
-      " 9, 10\n",
-      "18,  2\n",
-      " 3,  4\n",
-      " 4, 19\n",
-      " 4,  6\n",
-      " 4, 15\n",
-      "15, 13\n"
+      " 7, 14\n"
      ]
     }
    ],
@@ -603,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [
     {
@@ -620,14 +626,8 @@
       " 0,  2, 0.56920\n",
       " 4,  3, 0.59115\n",
       " 2,  7, 0.65159\n",
-      "We found 9 edges from node 1 to node 8\n",
-      " 1,  0\n",
-      " 0,  2\n",
-      " 2,  7\n",
-      " 0,  5\n",
-      " 0,  9\n",
+      "We found 3 edges from node 1 to node 8\n",
       " 1,  3\n",
-      " 3,  4\n",
       " 3,  6\n",
       " 6,  8\n"
      ]
@@ -819,6 +819,9 @@
     "Total bits used by encoding, where each character is encoded using 2 bits = 20000 (Average 2 bits)  \n",
     "\n",
     "Photograph of the huffman tree generation process and calculations shown in the photograph. \n",
+    "\n",
+    "<img src=\"Huffman1.JPG\">\n",
+    "<img src=\"Huffman2.JPG\">\n",
     "\n",
     "***"
    ]
@@ -1200,70 +1203,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dynamic_knapsack(arr,target_sum):\n",
+    "def Dynamic_Knapsack(array,target_sum):\n",
     "\n",
-    "    '''https://www.baeldung.com/cs/subset-of-numbers-closest-to-target'''\n",
+    "    n = len(array)\n",
     "\n",
-    "    n = len(arr)\n",
-    "    dp = [[None for _ in range (target_sum+1)] for __ in range(n+1)]\n",
-    "    for sum in range(0,target_sum+1):\n",
-    "        dp[n][sum] = sum\n",
-    "    for i in range(n-1, -1,-1):\n",
-    "        for sum in range(target_sum,-1,-1):\n",
-    "            pick = 0\n",
-    "            if sum + arr[i] <= target_sum:\n",
-    "                pick = dp[i+1][sum+arr[i]]\n",
-    "            leave = dp[i+1][sum]\n",
-    "            dp[i][sum] = max(pick,leave)\n",
-    "    # print(\"table\",dp)\n",
-    "    return dp\n",
-    " "
+    "    # the dynamic programming table \n",
+    "    # with columns indicating sums between 0 and target sum\n",
+    "    # with rows indicating the the number of items in the knapsack\n",
+    "    # The element values indicate attainable sum\n",
+    "    dp = [[None for _ in range(target_sum+1)] for __ in range(n+1)]\n",
+    "\n",
+    "    #generate data and save in K\n",
+    "    for i in range(n + 1):\n",
+    "        for chosen_sum in range(target_sum + 1):\n",
+    "            # for empty subset or for a sum of 0.\n",
+    "            if i == 0 or chosen_sum == 0:\n",
+    "                dp[i][chosen_sum] = 0\n",
+    "            # if current array element does not overshoot the chosen_sum, it may be possible to include the current array element\n",
+    "            elif array[i-1] <= chosen_sum:\n",
+    "                pick = array[i-1] + dp[i-1][chosen_sum-array[i-1]] #value of the array element + attained sum without the array element.\n",
+    "                leave = dp[i-1][chosen_sum] #just leave this array element out and use the sum without it. \n",
+    "                dp[i][chosen_sum]= max(pick,leave) #pick the max of the both\n",
+    "            else:\n",
+    "                dp[i][chosen_sum] = dp[i-1][chosen_sum] #including the array element overshoots the chosen_sum.\n",
+    "\n",
+    "    #Get solution from table\n",
+    "    subset = []\n",
+    "    remaining_sum = target_sum\n",
+    "    while remaining_sum > 0:\n",
+    "        #start from the last element. \n",
+    "        for i in range(n,-1,-1):\n",
+    "            if dp[i][remaining_sum] > dp[i-1][remaining_sum]:\n",
+    "                subset.append(array[i-1])\n",
+    "                remaining_sum = dp[i][remaining_sum] - array[i-1]\n",
+    "\n",
+    "    return subset, dp[n][target_sum]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[8, 9, 9, 9, 9, 8, 9, 9, 9, 9],\n",
-       " [7, 8, 9, 8, 9, 7, 8, 9, 8, 9],\n",
-       " [5, 6, 7, 8, 9, 5, 6, 7, 8, 9],\n",
-       " [5, 6, 7, 8, 9, 5, 6, 7, 8, 9],\n",
-       " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]"
-      ]
-     },
-     "execution_count": 309,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subset of elements summing closest to 9 is [1, 2, 5] with a sum of 8\n"
+      "subset of elements summing closest to 4 is [2, 1] with a sum of 3\n"
      ]
     }
    ],
    "source": [
-    "A = [1,2,5,5]\n",
-    "target_sum = 9\n",
+    "A = [1,2,5]\n",
+    "target_sum = 4\n",
+    "\n",
+    "sack, closest_sum = Dynamic_Knapsack(A,target_sum)\n",
+    "\n",
+    "print(f\"subset of elements summing closest to {target_sum} is {sack} with a sum of {closest_sum}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 545,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subset of elements summing closest to 726 is [101, 91, 83, 70, 75, 71, 67, 51, 48, 37, 27, 5] with a sum of 726\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [5, 23, 27, 37, 48, 51, 63, 67, 71, 75, 70, 83, 889, 91, 101, 112, 121, 132, 137, 141, 143, 147, 153, 159, 171, 181, 190, 191]\n",
+    "target_sum = 726\n",
+    "\n",
+    "sack, closest_sum = Dynamic_Knapsack(A,target_sum)\n",
+    "\n",
+    "print(f\"subset of elements summing closest to {target_sum} is {sack} with a sum of {closest_sum}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 546,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dynamic_knapsack(arr,target_sum):\n",
+    "\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    # the dynamic programming table \n",
+    "    # with columns indicating sums between 0 and target sum\n",
+    "    # with rows indicating the the number of elements in the knapsack\n",
+    "    dp = [[None for _ in range(target_sum+1)] for __ in range(n+1)]\n",
+    "\n",
+    "    # Initialising the last row of the table with its corresponding column values\n",
+    "    for sum in range(0,target_sum+1):\n",
+    "        dp[n][sum] = sum\n",
+    "    \n",
+    "    # print(table)\n",
+    "    #iterate through previous rows\n",
+    "    for i in range(n-1, -1,-1):\n",
+    "         \n",
+    "        for sum in range(target_sum,-1,-1):\n",
+    "            pick = 0\n",
+    "            if sum + arr[i] <= target_sum:\n",
+    "                pick = dp[i+1][sum+arr[i]]\n",
+    "            leave = dp[i+1][sum]\n",
+    "            dp[i][sum] = max(pick,leave)\n",
+    "\n",
+    "    return dp\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 547,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subset of elements summing closest to 4 is [1, 2] with a sum of 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [1,2,5]\n",
+    "target_sum = 4\n",
     "table = dynamic_knapsack(A,target_sum)\n",
     "\n",
     "add_to_sack = []\n",
@@ -1278,19 +1352,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subset of elements summing closest to 726 is [63, 191, 70, 71, 75, 83, 91, 101, 112, 121] with a sum of 726\n"
+      "subset of elements summing closest to 45 is [10, 43, 35] with a sum of 45\n"
      ]
     }
    ],
    "source": [
-    "A = list({5, 23, 27, 37, 48, 51, 63, 67, 71, 75, 70, 83, 889, 91, 101, 112, 121, 132, 137, 141, 143, 147, 153, 159, 171, 181, 190, 191})\n",
+    "A = [1,10,43,12,35,77]\n",
+    "target_sum = 45\n",
+    "table = dynamic_knapsack(A,target_sum)\n",
+    "\n",
+    "add_to_sack = []\n",
+    "row = 0\n",
+    "while row<len(table)-1:\n",
+    "    if table[row+1][0] != table[row][0]:\n",
+    "        add_to_sack.append(A[row])\n",
+    "    row += 1\n",
+    "\n",
+    "print(f\"subset of elements summing closest to {target_sum} is {add_to_sack} with a sum of {table[0][0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 549,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subset of elements summing closest to 726 is [121, 132, 159, 181, 190, 191] with a sum of 726\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [5, 23, 27, 37, 48, 51, 63, 67, 71, 75, 70, 83, 889, 91, 101, 112, 121, 132, 137, 141, 143, 147, 153, 159, 171, 181, 190, 191]\n",
     "target_sum = 726\n",
     "table = dynamic_knapsack(A,target_sum)\n",
     "\n",
