--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -1190,6 +1190,8 @@
     "\n",
     "Given an L table, the length of the LCS is given by the value at the bottom right of the table. In this case, the value at the bottom right is 6. Therefore the length of the LCS is 6.\n",
     "\n",
+    "<img src=\"LCS.png\"/>\n",
+    "\n",
     "***"
    ]
   },
